--- a/templates/admin/file_upload.html
+++ b/templates/admin/file_upload.html
@@ -1,5 +1,6 @@
 {{define "admin/file_upload"}}
-{{template "admin/header" .}}
+
+{{template "admin/head" .}}
 {{template "admin/navigation" .}}
 <main>
 	{{template "skel/flash" .}}
