--- a/templates/admin/forgot_password.html
+++ b/templates/admin/forgot_password.html
@@ -1,6 +1,6 @@
 {{define "admin/forgot_password"}}
 
-{{template "admin/header"}}
+{{template "admin/head" .}}
 <body>
 	<main>
 		<form action="/admin/forgot-password" method="POST">
