--- a/templates/admin/users.html
+++ b/templates/admin/users.html
@@ -1,6 +1,6 @@
 {{define "admin/users"}}
 
-{{template "admin/header" .}}
+{{template "admin/head" .}}
 {{template "admin/navigation" .}}
 <main>
 	{{template "skel/flash" .}}
