--- a/templates/admin/article_add.html
+++ b/templates/admin/article_add.html
@@ -1,6 +1,6 @@
 {{define "admin/article_add"}}
 
-{{template "admin/header" .}}
+{{template "admin/head" .}}
 {{template "admin/navigation" .}}
 
 <main>
