--- a/templates/admin/article_edit.html
+++ b/templates/admin/article_edit.html
@@ -1,5 +1,6 @@
 {{define "admin/article_edit"}}
-{{template "admin/header" .}}
+
+{{template "admin/head" .}}
 {{template "admin/navigation" .}}
 
 <main>
