--- a/templates/admin/articles.html
+++ b/templates/admin/articles.html
@@ -1,5 +1,6 @@
 {{define "admin/articles"}}
-{{template "admin/header" .}}
+
+{{template "admin/head" .}}
 {{template "admin/navigation" .}}
 <main>
 	{{template "skel/flash" .}}
