--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -1,5 +1,6 @@
 {{define "admin/login"}}
-{{template "admin/header"}}
+
+{{template "admin/head" .}}
 <body>
 	<main>
 		<form action="/admin" method="POST">
