--- a/templates/admin/reset_password.html
+++ b/templates/admin/reset_password.html
@@ -1,5 +1,6 @@
 {{define "admin/reset_password"}}
-{{template "admin/header"}}
+
+{{template "admin/head"}}
 <body>
 	<main>
 		<form action="/admin/reset-password/{{.hash}}" method="POST">
