--- a/templates/admin/site_edit.html
+++ b/templates/admin/site_edit.html
@@ -1,5 +1,6 @@
 {{define "admin/site_edit"}}
-{{template "admin/header" .}}
+
+{{template "admin/head" .}}
 {{template "admin/navigation" .}}
 <main>
 	{{template "skel/flash" .}}
