--- a/templates/admin/user_profile.html
+++ b/templates/admin/user_profile.html
@@ -1,5 +1,6 @@
 {{define "admin/user_profile"}}
-{{template "admin/header" .}}
+
+{{template "admin/head" .}}
 {{template "admin/navigation" .}}
 
 <main>
