--- a/templates/front/articles.html
+++ b/templates/front/articles.html
@@ -2,7 +2,7 @@
 
 {{template "front/head" .}}
 
-	<link rel="alternate" type="application/rss+xml" href="/rss.xml" />
+	<link rel="alternate" type="application/rss+xml" href="/rss.xml">
 </head>
 
 <body>
