--- a/templates/front/index.html
+++ b/templates/front/index.html
@@ -1,7 +1,7 @@
 {{define "front/index"}}
 
 {{template "front/head" .}}
-	<link rel="alternate" type="application/rss+xml" href="/rss.xml" />
+	<link rel="alternate" type="application/rss+xml" href="/rss.xml">
 </head>
 
 <body>
