minor link text change

--- a/templates/front/article.html
+++ b/templates/front/article.html
@@ -20,7 +20,7 @@
 	
 			{{.Content | ParseMarkdown}}
 	
-			<a href="/">&laquo; Go back</a>
+			<a href="/">&laquo; Go to articles</a>
 		{{end}}
 		</article>
 	</main>
