--- a/templates/admin/forgot_password.html
+++ b/templates/admin/forgot_password.html
@@ -8,8 +8,8 @@
 
 				{{template "skel/flash" .}}
 
-				<label for="email">E-mail</label>
-				<input type="email" required="required" name="email" id="email" value="{{.user.Email}}" placeholder="email...">
+				<label for="email">Email</label>
+				<input type="email" required="required" name="email" id="email" value="{{.user.Email}}" placeholder="Email...">
 
 				{{ .csrfField }}
 
