--- a/templates/admin/user_edit.html
+++ b/templates/admin/user_edit.html
@@ -12,8 +12,8 @@
 				<label for="username">Username</label>
 				<input type="username" name="username"  value="{{.Username}}" id="username" placeholder="Username...">
 				
-				<label for="email">E-mail</label>
-				<input type="email" name="email"  value="{{.Email}}" id="email" placeholder="E-Mail...">
+				<label for="email">Email</label>
+				<input type="email" name="email"  value="{{.Email}}" id="email" placeholder="Email...">
 				
 				<label for="displayname">Display name</label>
 				<input type="text" value="{{.DisplayName}}" id="displayname" name="displayname" placeholder="Display name...">
