--- a/templates/admin/user_profile.html
+++ b/templates/admin/user_profile.html
@@ -13,8 +13,8 @@
 			<label for="username">Username</label>
 			<input type="username" name="username"  value="{{.Username}}" id="username" placeholder="Username...">
 
-			<label for="email">E-mail</label>
-			<input type="email" value="{{.Email}}" name="email" id="email" placeholder="E-mail..." required>
+			<label for="email">Email</label>
+			<input type="email" value="{{.Email}}" name="email" id="email" placeholder="Email..." required>
 
 			<label for="displayname">Display name</label>
 			<input type="text" value="{{.DisplayName}}" id="displayname" name="displayname" placeholder="Display name..." required>
