--- a/templates/admin/user_add.html
+++ b/templates/admin/user_add.html
@@ -11,8 +11,8 @@
 			<label for="username">Username</label>
 			<input type="username" name="username" {{if .user}}value="{{.user.Username}}"{{end}} value="{{.Username}}" id="username" placeholder="Username..." required>
 
-			<label for="email">E-mail</label>
-			<input type="email" id="email" name="email" {{if .user}}value="{{.user.Email}}"{{end}} placeholder="e-Mail..." required>
+			<label for="email">Email</label>
+			<input type="email" id="email" name="email" {{if .user}}value="{{.user.Email}}"{{end}} placeholder="Email..." required>
 
 			<label for="displayname">Display name</label>
 			<input type="text" id="displayname" name="displayname" {{if .user}}value="{{.user.DisplayName}}"{{end}} placeholder="Display name..." required>
