--- a/templates/admin/user_profile.html
+++ b/templates/admin/user_profile.html
@@ -26,12 +26,12 @@
 			<input type="password" id="password" name="password" placeholder="Password...">
 
 			<label for="retyped_password">Retype password</label>
-			<input type="password" id="retyped_password" name="retyped_password" placeholder="Retype Password...">
+			<input type="password" id="retyped_password" name="retyped_password" placeholder="Retype password...">
 
 			{{ $.csrfField }}
 			
 			<div class="button-group">
-				<button name="action" value="update">Speichern</button>
+				<button name="action" value="update">Save</button>
 			</div>
 		</form>
 	{{end}}
