--- a/templates/front/head.html
+++ b/templates/front/head.html
@@ -8,6 +8,17 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1.0">
 		<link rel="stylesheet" href="/assets/css/master.css">
 		<link rel="icon" href="/assets/favicon.ico" type="image/vnd.microsoft.icon">
-		
+
 		{{GetMetadata .}}
+
+		{{if .article}}
+			<meta name="description" content="{{.article.Teaser}}">
+			<meta name="author" content="{{.article.Author}}">
+		{{end}}
+    </head>
+
+<body>
+	<header>
+		<h1 class="header-text">{{PageTitle}}</h1>
+	</header>
 {{end}}
