--- a/templates/admin/users.html
+++ b/templates/admin/users.html
@@ -9,9 +9,42 @@
 
 	<p><a href="/admin/user/new">Add an user</a> | <a href="/admin/user_invite/new">Invite an user</a></p>
 
-	{{with .userInvites}}
-	<h3>Open Invites</h3>
+	{{with .user_invites}}
+		<h3>Open Invites</h3>
+		
+		<table>
+		<thead>
+			<tr>
+			<th>Created at</th>
+			<th>Username</th>
+			<th>E-mail</th>
+			<th>Display name</th>
+			<th>Admin</th>
+			<th>Invited by</th>
+			<th>Actions</th>
+			</tr>
+		</thead>
+		<tbody>
+			{{range .}}
+				<tr>
+					<td>{{.CreatedAt | FormatDateTime}}</td>
+					<td>{{.Username}}</td>
+					<td>{{.Email}}</td>
+					<td>{{.DisplayName}}</td>
+					<td>{{.IsAdmin | BoolToIcon}}</td>
+					<td>{{.CreatedBy.DisplayName}}</td>
+					<td class="action-data">
+						<a href="/admin/user_invite/edit/{{.ID}}" title="Invite">Resend invite link</a>
+						<a href="/admin/user_invite/delete/{{.ID}}" title="Remove">Remove</a>
+					</td>
+				</tr>
+			{{end}}
+		</tbody>
+	</table>
 	{{end}}
+	
+	<br>
+	<h3>Users</h3>
 	
 	<table>
 		<thead>
