--- a/templates/admin/user_invite_add.html
+++ b/templates/admin/user_invite_add.html
@@ -7,7 +7,7 @@
 
 	<h2>Invite user</h2>
 			
-	<form action="/admin/user_invite/new" method="post">
+	<form action="/admin/user-invite/new" method="post">
 		<label for="username">Username</label>
 		<input type="username" name="username" {{if .user_invite}}value="{{.user_invite.Username}}"{{end}} value="{{.Username}}" id="username" placeholder="Username..." required>
 
