--- a/templates/admin/articles.html
+++ b/templates/admin/articles.html
@@ -32,7 +32,7 @@
 					{{if not .Published}}
 						<a href="/admin/article/publish/{{.ID}}" title="Publish">Publish</a>
 					{{else}}
-						<a href="/admin/article/publish/{{.ID}}" title="Depublish">Depublish</a>
+						<a href="/admin/article/publish/{{.ID}}" title="Unpublish">Unpublish</a>
 					{{end}}
 
 					<a href="/admin/article/edit/{{.ID}}" title="Edit">Edit</a>
