--- a/templates/admin/sites.html
+++ b/templates/admin/sites.html
@@ -48,7 +48,7 @@
 						{{if not .Published}}
 							<a href="/admin/site/publish/{{.ID}}" title="Publish">Publish</a>
 						{{else}}
-							<a href="/admin/site/publish/{{.ID}}" title="Depublish">Depublish</a>
+							<a href="/admin/site/publish/{{.ID}}" title="Unpublish">Unpublish</a>
 						{{end}}
 
 						<a href="/admin/site/edit/{{.ID}}" title="Edit">Edit</a>
