--- a/templates/admin/user_edit.html
+++ b/templates/admin/user_edit.html
@@ -19,7 +19,7 @@
 				<input type="text" value="{{.DisplayName}}" id="displayname" name="displayname" placeholder="Display name..." required>
 				
 				<label for="password">New password</label>
-				<input type="password" id="password" name="password" placeholder="Password..." required>
+				<input type="password" id="password" name="password" placeholder="Password...">
 			
 				<div class="checkbox">
 					<label><input type="checkbox" id="admin" name="admin" value="on"{{if .IsAdmin}} checked{{end}}>Admin?</label>
