--- a/templates/admin/reset_password.html
+++ b/templates/admin/reset_password.html
@@ -5,7 +5,7 @@
 		<form action="/admin/reset-password/{{.hash}}" method="POST">
 			<h2>Password reset</h2>
 
-			{{template "admin/flash" .}}
+			{{template "skel/flash" .}}
 
 			<label for="password">Password</label>
 			<input type="password" required="required" autocomplete="off" name="password" id="password" placeholder="Password...">
