--- a/templates/admin/reset_password.html
+++ b/templates/admin/reset_password.html
@@ -16,7 +16,7 @@
 			{{ .csrfField }}
 
 			<div class="button-group">
-				<input type="submit" value="Send reset instruction">
+				<input type="submit" value="Save new password">
 			</div>
 		</form>
 	</main>
