--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -380,15 +380,13 @@ input[type='submit'] {
 	margin: 0.4em;
 	padding: 0.625em 1em;
 	margin-top: 1em;
-	border-color: #285e8e;
-	border-radius: 0;
-	border-style: solid;
-	border-width: 0.125rem;
+	border: 1px solid grey;
 }
 
 button:hover, button:focus,
 input[type='submit']:hover, input[type='submit']:focus {
-	background-color: #3c4ee5;
+	text-decoration: underline;
+	border: 1px solid grey;
 }
 
 .button-group {
@@ -406,11 +404,16 @@ input[type='submit']:hover, input[type='submit']:focus {
 	color: #fffaf0;
 	margin: 0.4em;
 	padding: 0.625em 1em;
+	text-decoration: none;
 	margin-top: 1em;
-	border-color: #285e8e;
-	border-radius: 0;
-	border-style: solid;
-	border-width: 0.125rem;
+}
+
+.button-no {
+	background-color: #f00;
+}
+
+.button-yes {
+	background-color: #01951d;
 }
 
 .button-inactive {
