--- a/templates/admin/head.html
+++ b/templates/admin/head.html
@@ -11,7 +11,8 @@
     </head>
 
 <body>
-	<header>
-		<h1 class="header-text">{{PageTitle}} | Administration</h1>
-	</header>
+	<div class="container">
+		<header>
+			<h1 class="header-text">{{PageTitle}} | Administration</h1>
+		</header>
 {{end}}
