--- a/templates/front/article.html
+++ b/templates/front/article.html
@@ -23,6 +23,9 @@
 			<a href="/">&laquo; Go to articles</a>
 		{{end}}
 		</article>
+		<aside>
+		
+		</aside>
 	</main>
 	{{template "front/footer"}}
 {{end}}
