--- a/templates/front/articles.html
+++ b/templates/front/articles.html
@@ -34,5 +34,13 @@
 			{{PaginationBar .pagination}}
 		{{end}}
 	</main>
+
+	<aside>
+		<ul>
+			<li>
+				<a href="#" class="active" href="/">Articles</a>
+			</li>
+		</ul>
+	</aside>
 	{{template "front/footer"}}
 {{end}}
