--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -9,6 +9,13 @@ html {
 	box-sizing: border-box;
 }
 
+.container {
+	height: 100vh;
+	display: grid;
+	grid-template-rows: 80px 1fr 30px;
+	grid-template-columns: 20% 30% 35% 15%;
+}
+
 *,
 *:before,
 *:after {
@@ -60,18 +67,12 @@ body {
 }
 
 main {
-	left: 0;
-	padding: 1rem;
-	position: relative;
-	top: 4.2rem;
 	width: 100%;
-}
-
-@media (min-width: 37em) {
-	main {
-		left: 17.5rem;
-		width: calc(100% - 17.5rem);
-	}
+	grid-column-start: 2; 
+	grid-column-end: 4; 
+	grid-row-start: 2;
+	grid-row-end: 3;
+	padding: 1em;
 }
 
 @media (min-width: 75em) {
@@ -87,11 +88,10 @@ main {
 }
 
 footer {
-	position:fixed;
-	bottom: 0;
-	left: 17.5rem;
-	width: 100%;
-	height: 30px;
+	grid-column-start: 1; 
+	grid-column-end: 5; 
+	grid-row-start: 3;
+	grid-row-end: 4;
 	background-color: #1f1f1f;
 	color: #ffffff;
 	font-size: 0.7em;
@@ -105,50 +105,48 @@ footer p {
 }
 
 /* Header */
-header {
-	height: 5rem;
-	left: 0;
-	position: fixed;
-	top: 0;
-	width: 100%;
-	z-index: 99;
+header {	
+	grid-column-start: 1; 
+	grid-column-end: 5; 
+	grid-row-start: 1;
+	grid-row-end: 2;
 	background-color: #285e8e;
+	padding: 10px 0 0 10px;
 }
 
 .header-text {
 	color: #fffaf0;
 	height: 0;
-	left: 1.25rem;
-	margin-top: -0.875rem;
-	position: absolute;
-	top: 50%;
+}
+
+aside {
+	grid-column-start: 4; 
+	grid-column-end: 5; 
+	grid-row-start: 2;
+	grid-row-end: 3;
+	background-color: #f9f9f9;
 }
 
 /* Navigation */
 nav {
 	background-color: #1f1f1f;
 	font-size: 1.5em;
-	height: calc(100vh - 5rem);
-	left: 0;
-	position: fixed;
-	top: 5rem;
-	width: 17.5rem;
+	grid-column-start: 1; 
+	grid-column-end: 2; 
+	grid-row-start: 2;
+	grid-row-end: 3;
 }
 
 @media (max-width: 37em) {
-    header {
-		display: none;
-    }
-
-    main {
+	main {
 		top: 0;
-    }
+	}
 
-    nav {
+	nav {
 		position: static;
 		width: 100%;
 		height: 100%;
-    }
+	}
 }
 
 nav a {
@@ -191,6 +189,10 @@ nav a.active {
 
 /* Main content */
 main {
+	grid-column-start: 2; 
+	grid-column-end: 4; 
+	grid-row-start: 2;
+	grid-row-end: 3;
 	max-width: 75em;
 }
 
@@ -326,6 +328,7 @@ table {
 	display: table;
 	border-collapse:collapse;
 	width: 100%;
+	font-size: 0.7em;
 }
 
 th {
