--- a/templates/front/head.html
+++ b/templates/front/head.html
@@ -18,7 +18,8 @@
     </head>
 
 <body>
-	<header>
-		<h1 class="header-text">{{PageTitle}}</h1>
-	</header>
+	<div class="container">
+		<header>
+			<h1 class="header-text">{{PageTitle}}</h1>
+		</header>
 {{end}}
