--- a/templates/front/article.html
+++ b/templates/front/article.html
@@ -27,14 +27,14 @@
 		{{end}}
 		</article>
 	</main>
+
 	<aside>
 		<ul>
+			{{range .categories}}
 			<li>
-				<a href="#" href="/">Sonstiges</a>
+				<a href="#" href="/">{{.Name}}</a>
 			</li>
-			<li>
-				<a href="#" class="active" href="/">Golang</a>
-			</li>
+			{{end}}
 		</ul>
 	</aside>
 	{{template "front/footer"}}
