--- a/templates/front/index.html
+++ b/templates/front/index.html
@@ -42,12 +42,11 @@
 		
 		<aside>
 			<ul>
+				{{range .categories}}
 				<li>
-					<a href="#" href="/">Sonstiges</a>
+					<a href="#" href="/">{{.Name}}</a>
 				</li>
-				<li>
-					<a href="#" class="active" href="/">Golang</a>
-				</li>
+				{{end}}
 			</ul>
 		</aside>
 		
