first draft of categories #2

--- a/templates/front/articles.html
+++ b/templates/front/articles.html
@@ -42,7 +42,7 @@
 		<ul>
 			{{range .categories}}
 			<li>
-				<a href="#" href="/">{{.Name}}</a>
+				<a href="/articles/category/{{.SlugEscape}}">{{.Name}}</a>
 			</li>
 			{{end}}
 		</ul>
