further work on categories

--- a/templates/admin/article_add.html
+++ b/templates/admin/article_add.html
@@ -10,13 +10,13 @@
 
     <form action="/admin/article/new" method="post">
 		<label for="category">Category</label>
-		<select name="category">
+		<select name="categoryID">
 			<option></option>
-			{{range .categories}} 
+			{{range .categories}}
 			<option value="{{.ID}}">{{.Name}}</option>
 			{{end}}
 		</select>
-	
+
 		<label for="headline">Headline</label>
 		<input type="text" id="headline" name="headline" placeholder="Headline..." {{if .article.Headline}}value="{{.article.Headline}}"{{end}} required>
 
