remove is admin field

--- a/templates/front/error.html
+++ b/templates/front/error.html
@@ -3,12 +3,11 @@
 {{template "front/head" .}}
 </head>
 
-<body>	
-	{{template "front/navigation" .}}
-
+<body>
+	{{template "admin/navigation" .}}
 	<main>
-		<h2>Error</h2>
+			<h2>An error occured</h2>
 
-		{{template "skel/flash" .}}
+			{{template "skel/flash" .}}
 	</main>
 {{end}}
