--- a/templates/front/article.html
+++ b/templates/front/article.html
@@ -32,10 +32,11 @@
 		<ul>
 			{{range .categories}}
 			<li>
-				<a href="#" href="/">{{.Name}}</a>
+				<a{{if $.catActive}}{{if eq $.catActive .SlugEscape}} class="active"{{end}}{{end}} href="/articles/category/{{.SlugEscape}}">{{.Name}}</a>
 			</li>
 			{{end}}
 		</ul>
 	</aside>
+	
 	{{template "front/footer"}}
 {{end}}
