--- a/templates/front/site.html
+++ b/templates/front/site.html
@@ -1,21 +1,25 @@
 {{define "front/site"}}
 
-{{template "front/head" .}}
-</head>
-	<body>
-		<div class="container">
-			<header>
-				<h1 class="header-text">{{PageTitle}}</h1>
-			</header>
+{{define "front/articles"}}
 
-			{{template "front/title"}}
-		
-			{{template "front/navigation" .}}
-		
-			<main>
-				{{template "skel/flash" .}}
-				{{with .site}}
-				    {{.Content | ParseMarkdown}}
-				{{end}}
-			</main>
+{{template "front/head" .}}
+
+	<link rel="alternate" type="application/rss+xml" href="/rss.xml">
+</head>
+
+<body>
+	<div class="container">
+		<header>
+			<h1 class="header-text">{{PageTitle}}</h1>
+		</header>
+
+	{{template "front/navigation" .}}
+
+	<main>
+		{{template "skel/flash" .}}
+
+		{{with .site}}
+		    {{.Content | ParseMarkdown}}
+		{{end}}
+	</main>
 {{end}}
