--- a/templates/admin/files.html
+++ b/templates/admin/files.html
@@ -13,7 +13,7 @@
 		<thead>
 			<tr>
 				<th>Last modified</th>
-				<th>Filename</th>
+				<th>Link</th>
 				<th>ContentType</th>
 				<th>Size</th>
 				<th>User</th>
@@ -22,15 +22,15 @@
 		</thead>
 
 		<tbody>
-			{{range .files}} 
+			{{range .files}}
 				<tr>
 					<td>{{.LastModified | FormatDateTime}}</td>
-					<td>{{.Filename}}</td>
+					<td>{{ApplicationURL}}/file/{{.FullFilename}}</td>
 					<td>{{.ContentType}}</td>
 					<td>{{.Size}}</td>
 					<td>{{.Author.Username}}</td>
 					<td class="action-data">
-						<a href="/file/{{.Filename}}" title="Show file">Show file</a>
+						<a href="/file/{{.FullFilename}}" title="Show file">Show file</a>
 						<a href="/admin/file/delete/{{.ID}}" title="Remove">Remove</a>
 					</td>
 				</tr>
