--- a/templates/front/article.html
+++ b/templates/front/article.html
@@ -19,7 +19,7 @@
 					<h2 class="article_link">{{.Headline}}</h2>
 					<p class="article_info">written by {{.Author.DisplayName}} on {{.PublishedOn.Time | FormatDate}}</p>
 
-					<p><b>{{.Teaser | NToBr}}</b></p>
+					<p>{{.Teaser | ParseMarkdown}}</p>
 
 					{{.Content | ParseMarkdown}}
 
