--- a/templates/front/articles.html
+++ b/templates/front/articles.html
@@ -27,7 +27,7 @@
 					<h2 class="article_link"><a href="/article/{{.SlugEscape}}">{{.Headline}}</a></h2>
 					<p class="article_info">written by {{.Author.DisplayName}} on {{.PublishedOn.Time | FormatDate}}</p>
 
-					<p>{{.Teaser | NToBr}}</p>
+					<p>{{.Teaser | ParseMarkdown}}</p>
 				</article>
 
 				{{end}}
