fixes for displaying the build version

--- a/templates/admin/action.html
+++ b/templates/admin/action.html
@@ -17,7 +17,7 @@
 			<div class="alert alert-info" role="alert"><p>{{.Description}}</p></div>
 
 			{{ $.csrfField }}
-			
+
 			<div class="button-group">
 				<button class="button button-yes" type="submit" name="action" value="yes">Yes</button>
 				<a href="{{.BackLinkURL}}" role="button" aria-disabled="true"><button class="button button-no" type="submit" name="action" value="yes">No</button></a>
@@ -26,7 +26,7 @@
 	{{end}}
 </main>
 
-{{template "admin/footer"}}
+{{template "admin/footer" .}}
 
 {{end}}
 
