--- a/templates/admin/site_add.html
+++ b/templates/admin/site_add.html
@@ -19,7 +19,7 @@
 		<textarea rows="25" id="content" name="content" placeholder="Content...">{{.site.Content}}</textarea>
 
 		{{ .csrfField }}
-		
+
 		<div class="button-group">
 			<button name="action" value="save">Save</button>
 			<button name="action" formtarget="_blank" value="preview">Preview</button>
@@ -27,6 +27,6 @@
 	</form>
 </main>
 
-{{template "admin/footer"}}
+{{template "admin/footer" .}}
 
 {{end}}
