--- a/templates/admin/user_profile.html
+++ b/templates/admin/user_profile.html
@@ -29,12 +29,12 @@
 			<input type="password" id="retyped_password" name="retyped_password" placeholder="Retype password...">
 
 			{{ $.csrfField }}
-			
+
 			<div class="button-group">
 				<button name="action" value="update">Save</button>
 			</div>
 		</form>
 	{{end}}
 </main>
-{{template "admin/footer"}}
+{{template "admin/footer" .}}
 {{end}}
