--- a/templates/admin/action.html
+++ b/templates/admin/action.html
@@ -20,7 +20,7 @@
 
 			<div class="button-group">
 				<button class="button button-yes" type="submit" name="action" value="yes">Yes</button>
-				<a href="{{.BackLinkURL}}" role="button" aria-disabled="true"><button class="button button-no" type="submit" name="action" value="yes">No</button></a>
+				<a href="{{.BackLinkURL}}" role="button" aria-disabled="true"><button class="button button-no" type="button" name="action" value="no">No</button></a>
 			</div>
 		</form>
 	{{end}}
