--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -14,8 +14,25 @@ html {
 	display: grid;
 	grid-template-rows: 80px 1fr 30px;
 	grid-template-columns: 20% 30% 35% 15%;
+	grid-template-areas:
+		"header header header header"
+		"nav content content sidebar"
+		"footer footer footer footer"
+  	;
 }
-
+@media screen and (max-width: 32em) {
+	.container {
+		grid-template-areas: "nav"
+		                     "content"
+		                     "sidebar"
+		                     "footer";
+		grid-template-columns: 100%;
+		grid-template-rows:	minmax(75px, auto)
+						   	1fr
+						   	minmax(75px, auto)
+						   	auto;
+	}
+}
 *,
 *:before,
 *:after {
@@ -71,31 +88,13 @@ body {
 }
 
 main {
+	grid-area: content;
 	width: 100%;
-	grid-column-start: 2;
-	grid-column-end: 4;
-	grid-row-start: 2;
-	grid-row-end: 3;
 	padding: 0 1em 1em 1em;
 }
 
-@media (min-width: 75em) {
-    main {
-		max-width: 75em;
-    }
-}
-
-@media (min-width: 120em) {
-    main {
-		max-width: 156em;
-    }
-}
-
 footer {
-	grid-column-start: 1;
-	grid-column-end: 5;
-	grid-row-start: 3;
-	grid-row-end: 4;
+	grid-area: footer;
 	background-color: #1f1f1f;
 	color: #ffffff;
 	font-size: 0.7em;
@@ -110,10 +109,7 @@ footer p {
 
 /* Header */
 header {
-	grid-column-start: 1;
-	grid-column-end: 5;
-	grid-row-start: 1;
-	grid-row-end: 2;
+	grid-area: header;
 	background-color: #285e8e;
 	padding: 10px 0 0 10px;
 }
@@ -124,33 +120,15 @@ header {
 }
 
 aside {
-	grid-column-start: 4;
-	grid-column-end: 5;
-	grid-row-start: 2;
-	grid-row-end: 3;
+	grid-area: sidebar;
 	background-color: #1f1f1f;
 }
 
 /* Navigation */
 nav {
+	grid-area: nav;
 	background-color: #1f1f1f;
 	font-size: 1.5em;
-	grid-column-start: 1;
-	grid-column-end: 2;
-	grid-row-start: 2;
-	grid-row-end: 3;
-}
-
-@media (max-width: 37em) {
-	main {
-		top: 0;
-	}
-
-	nav {
-		position: static;
-		width: 100%;
-		height: 100%;
-	}
 }
 
 aside a,
@@ -207,15 +185,6 @@ aside li {
 
 #pagination .pages {
 	padding: 1em 0;
-}
-
-/* Main content */
-main {
-	grid-column-start: 2;
-	grid-column-end: 4;
-	grid-row-start: 2;
-	grid-row-end: 3;
-	max-width: 75em;
 }
 
 main a[href^='http'] {
